--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,7 @@ jobs:
     env:
       GIT_COMMIT_MSG: '${{ github.event.head_commit.message }}'
 
+    steps:
     - name: Checkout
       uses: actions/checkout@v2
       with:
