--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,14 @@ jobs:
     env:
       GIT_COMMIT_MSG: '${{ github.event.head_commit.message }}'
 
+
     steps:
+    - matrix:
+        projects: [
+          "01_s3_bucket",
+          "02_asg"
+        ]    
+
     # - name: Dump GitHub context
     #   id: github_context_step
     #   run: echo '${{ toJSON(github) }}'
