--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Validate terraform configuration
     steps:
+      - matrix:
+          projects: [
+            "01_s3_bucket",
+            "02_asg"
+          ]        
+
       - name: Checkout
         uses: actions/checkout@v3
 
