More format fixes

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,8 +74,9 @@ jobs:
           "12_upgrading_terraform", 
           "13_importing_data",      
           "15_importing_webservice",
-          "17_static_site",
           "18_terraformer",    
+          "19_sops",
+          "20_cdk",
           "21_importing_ssm",
           "22_drift_detection",
           "23_honeycomb",
