--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,13 +49,14 @@ jobs:
       fail-fast: false
       matrix:
         projects: [
-          { project: "01_s3_bucket", tfvars: "" },
-          { project: "02_asg", tfvars: "" },
+          { project: "01_s3_bucket", tfvars: "terraform.tfvars" },
+          { project: "02_asg", tfvars: "terraform.tfvars" },
           { project: "03_locks_versions", tfvars: "" },
           { project: "04_envvars", tfvars: "" },
           { project: "05_debugging", tfvars: "" },
-          { project: "06_processing_plan_files", tfvars: "" },
-          { project: "07_remote_state", tfvars: "" },
+          { project: "06_processing_plan_files", tfvars: "terraform.tfvars" },
+          { project: "07_remote_state/create_template_file", tfvars: "" },
+          { project: "07_remote_state/render_template_file", tfvars: "" },
           { project: "08_module", tfvars: "" },
           { project: "09_targeting_resources", tfvars: "" },
           { project: "10_workspaces", tfvars: "" },
@@ -70,8 +71,8 @@ jobs:
           { project: "21_importing_ssm", tfvars: "" },
           { project: "22_drift_detection", tfvars: "" },
           { project: "23_honeycomb", tfvars: "" },
-          { project: "24_quine", tfvars: "" },
-          { project: "25_moved", tfvars: "" },
+          { project: "24_quine", tfvars: "terraform.tfvars" },
+          { project: "25_moved", tfvars: "terraform.tfvars" },
           { project: "26_github_modules", tfvars: "" },
           { project: "28_aiven_kafka", tfvars: "terraform.tfvars" },
         ]
